LibraryManagemant/src/objects/Borrow__c.object
<CustomObject>
    <fields>
        <fullName>Book_Id__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Borrows</relationshipLabel>
        <relationshipName>Borrows</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Borrowed_Books__c</fullName>
        <formula>IF(   ISNULL(DayOfReturn__c) ,false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Book Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DayOfBorrowed__c</fullName>
        <label>DayOfBorrowed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DayOfReturn__c</fullName>
        <label>DayOfReturn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>DayOfBorrowed__c + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fine__c</fullName>
        <formula>((DayOfReturn__c -  IF(DayOfReturn__c &lt;  Due_Date__c ,  DayOfReturn__c , Due_Date__c ))  * 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fine</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <description>lookup relation</description>
        <label>MemberID</label>
        <referenceTo>MemberID__c</referenceTo>
        <relationshipLabel>Borrows</relationshipLabel>
        <relationshipName>Borrows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Borrow</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Borrow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Borrows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>bname_eql_mname</fullName>
        <active>true</active>
        <description>bname_eql_mname</description>
        <errorConditionFormula>Name  &lt;&gt;  MemberID__r.NAME__c</errorConditionFormula>
        <errorMessage>name and member name is must be equel</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>limit_borrow_books</fullName>
        <active>true</active>
        <errorConditionFormula>MemberID__r.Borrowed_Books__c &gt; 4</errorConditionFormula>
        <errorMessage>Already 4 books was  given</errorMessage>
    </validationRules>
</CustomObject>